# FakeITAM

./: .gitignore
FakeITAM/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
FakeITAM.xcodeproj/: project.pbxproj
FakeITAM.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
FakeITAM/cpp/: .ycm_extra_conf.py  CMakeLists.txt  core.cpp  core.hpp  global_config.hpp  test.cpp  test.sh
FakeITAM/cpp/cmake/: FindOpenGL.cmake  Findglut.cmake  FindlibGL.cmake  FindlibGLU.cmake  Findlibglut.cmake
FakeITAM/cpp/engines/: CMakeLists.txt  depth_tracking_engine.cpp  depth_tracking_engine.hpp  image_engine.cpp  image_engine.hpp  log_engine.cpp  log_engine.hpp  main_engine.cpp  main_engine.hpp  reconstruction_engine.cpp  reconstruction_engine.hpp  rendering_engine.cpp  rendering_engine.hpp  tracking_engine.hpp
FakeITAM/cpp/utilities/: cholesky.hpp  matrix.hpp  mem_block.hpp  vector.hpp
FakeITAMTests/: FakeITAMTests.m
FakeITAMUITests/: FakeITAMUITests.m
